# sever-template

./: .gitignore  AGENT_README.md  CLAUDE.md  LICENSE  README.md  __init__.py  dev-inspector.sh  dev-port-check.sh  dev-start.sh  main.py  pyproject.toml
data/: users.json
src/: __init__.py
src/middleware/: __init__.py  custom_middleware.py
src/prompts/: __init__.py  user_prompts.py
src/resources/: __init__.py  user_resources.py
src/tools/: __init__.py  user_tools.py
