[project]
name = "mcp-server-template"
version = "0.1.0"
description = "A template for creating MCP servers with FastMCP"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name"},
]
dependencies = [
    "fastmcp>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.11.8",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
mcp-server-template = "main:main"
mcp-user-server = "main:main"